# scrapechecker

./: .gitignore  README.md  debug_contest.py  pyproject.toml
src/scrapechecker/: base_formatter.py  base_scraper.py  change_finder.py  formatter.py  main.py  site_monitor.py  telegram.py  types.py  web_scraper.py
src/scrapechecker/contest/: contest_formatter.py  contest_monitor.py  contest_scraper.py  contest_types.py
src/scrapechecker/example/: simple_formatter.py  simple_monitor.py  simple_scraper.py
src/scrapechecker/scrapers/: contest_monitor.py  contest_scraper.py  simple_scraper.py
